static/css/default.css
/* MAIN */

body {
  margin-top: 80px;
}

ul.nav.nav-list>li {
    margin-left: 10px;
}

.logo {
padding: 7px;
}

nav.navbar {
    background: #222222;
    box-shadow: 0px 0px 10px black;
}
.navbar .nav>li>a {
    text-shadow: 0 1px 0 #000;
    color: #efefef;
    font-family: 'PT Sans', Helvetica, arial, sans-serif;
}


.box {
    word-wrap: break-word;
    box-shadow: 0 0 2px rgba(0, 0, 0, 0.24);
    padding: 0;
    overflow: hidden;
    margin-bottom: 7px;
}

.box header a {
    color: #222222;
}

.box header {
    border-top: 4px solid #222222;
    padding-left: 7px;
    padding-right: 7px;
}

.row-same-height {
    display: flex;
    display: -webkit-flex;
    flex-wrap: wrap;
}
.row-same-height [class*='col-'] {
    margin-bottom: 20px;
    flex: 1  1 100%;
}
.row-same-height [class*='col-'] [class*='box']{
    height: 100%;
}

@media (min-width: 768px) {
    .row-same-height {
        display: flex;
        display: -webkit-flex;
        flex-wrap: wrap;
    }
    .row-same-height [class*='col-'] {
        margin-bottom: 20px;
        /*
        * HAAAACK FOR Å FIKSE SAFARI < 11.0.1
         */
        flex: 1  1 49%;
    }
}


.box p {
    padding-left:   7px;
    padding-right: 7px;
    padding-bottom: 7px;
}

    /* Div that holds all parts of page except footer */
    #whitebox {
        background: white url(../img/bgnoise.png);
        border-bottom: 1px solid black;
        padding-top: 20px;
        padding-bottom: 20px;
    }

    @media (max-width: 767px) {
        #whitebox {
            margin-left: -20px;
            margin-right: -20px;
            padding-right: 20px;
            padding-left: 20px;
        }
    }

    aside h3 { margin-top: 15px; }
    aside h3:first-child { margin-top: 0; }

    form.dropdown-menu {
        padding: 15px;
    }

    form.dropdown-menu input {
        width: 15em;
        margin-bottom: 15px;
    }

    /* Typography */

		.wiki-article h1, .wiki-article h2, .wiki-article h3 {
			width: 100%;
			border-bottom: 1px solid #ccc;
		}

    h1 {
        margin-bottom: 8px;
        font-size: 32px;
        font-weight: bold;
        line-height: 37px;
        margin-top: 15px;
    }

    h2 {
        margin-bottom: 8px;
        font-size: 30px;
        font-weight: bold;
        line-height: 37px;
        margin-top: 15px;
    }

    h3 {
        margin-bottom: 8px;
        font-size: 24px;
        font-weight: bold;
        line-height: 28px;
    }

h3 a, h3 a:hover, h3 a:active, h3 a:focus{
    color: #222222;
}

    p {
        font-size: 14px;
        line-height: 20px;
    }

    #whitebox p {
        color: rgb(50, 50, 50);
    }

    /* Registration */

    .registrations {
        margin-top: -5px;
    }

    .registrations span {
        margin-left: 3px;
    }

    .registrations .waiting-place {
        opacity: 0.5;
    }


/* Utility classes */

    /* Some floats for articles */
    img[alt=right] {
        float: right;
    }

    img[alt=left] {
        float: left;
    }

    /* Remove code styling from rendered LaTeX */
    code.jax {
        background: inherit;
        border: none;
        color: inherit;
        font: inherit;
        margin: 0;
    }

    .pagination {
        text-align: center;
    }

    .center {
        text-align: center;
    }

    .wide {
        width: 100%;
    }

    .clear {
        clear: both;
    }

/* REKLAME */
    .ad.box {
        border-radius: 5px;
        border-width: 2px;
        font-size: 90%;
        padding-bottom: 20px;
        background-color: #ffffff;
    }
    .ad.box p {
        padding: 5px;
    }
    .ad.box img {
        text-align: center;
    }


/* MathJAX customisation */

    .MathJax_Display {
        margin-bottom:-15px !important;
        margin-top: 3px !important;
    }



/* FOOTER */
    footer {
        /* TODO: Add cross-browser support */
        background-color: black;
        border-top:1px solid #666;
        color: #ccc;
        padding-top: 30px;
    }

    /* h2 is black, so make it white */
    footer h2 {
        color: #ccc;
    }
    footer a { color: #bddeff; }

    footer .kontakt table {
    }
        footer .kontakt table th {
        }
        footer .kontakt table td {
            border-top: 0;
        }
        footer .kontakt table td:first-child {
            color: white;
        }

/* COMMENTS */
    .comments-header {
        margin-top: 30px;
    }
    form.add-comment {
        margin-top: 20px;
        margin-left: 0;
        margin-right: 0;
    }
    form.add-comment .control-group:first-of-type { padding-top: 9px;}
    form.add-comment textarea {
        width: 98%;
        height: 100px;
    }
    .comment .text { width: 100%; overflow: hidden; }
    .comment .info { margin-bottom: 10px; }
    .comment .author { font-weight: bold; }
    .comment .date { color: #999; }

    #comment-help-buttons {
        margin-top: 20px;
    }

/* for logo + søkefelt i headeren */

    form#searchtop {
        display: inline-block;
        padding-top: 10px;
        width: 150px;
    }

/* Endringer i Bootstrap-farger */
.navbar-inner {border: 1px solid #c0c0c0;}/* Navbar border */
.navbar-right.dropdown {margin-right: 0px;}

/* News */

.advert {
    height: 100%;
}

.advert_footer {
    bottom: 0;
}

.btn-read-more {
    background-image: linear-gradient(to bottom,#fff 0,#f8f8f8 100%);
}

.btn-read-more:hover {
    background-image: linear-gradient(to bottom,#f2f2f2 0,#eaeaea 100%);
}

li.pager-counter {
    cursor: default;
}

.countdown {
    font-family: sans-serif;
    font-size: 50px;
    padding: 10px;
}

.c-event {
    background-color: #5cb85c;
}

.c-bedpres {
    background-color: #d9534f;
}

.well {
    background: #F1F1F1;
}

.fixed-tab-height {
height:340px;
Overflow-y: auto;
Overflow-x: hidden;
}

